# deback

./: .gitignore  CHANGELOG.md  README.md  config.backup.test.yaml  config.sync.test.yaml  config.test.yaml  deback.cabal  deback.nix  default.nix  fourmolu.yaml  release.sh  shell.nix  static.nix
.chglog/: config.yml
.github/workflows/: release-please.yml
app/: Main.hs
app/Deback/: Cli.hs  Programs.hs  Smartctl.hs
app/Deback/Tools/: Autorestic.hs  Cryptsetup.hs  Format.hs  Mount.hs  Rrclone.hs  Smartctl.hs
nix/: sources.json
scripts/: disk-init.sh  disk-list.sh  disk-mount.sh  disk-unmount.sh
