cabal-version:      2.4
name:               deback
version:            0.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vehbi Sinan Tunalioglu
maintainer:         vst@vsthost.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable deback
    main-is:          Main.hs

    other-modules:
          Deback.Cli
        , Deback.Programs
        , Deback.Tools.Cryptsetup
        , Deback.Tools.Format
        , Deback.Tools.Mount
        , Deback.Tools.Smartctl
        , Paths_deback


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base ^>= 4.16.1.0
        , aeson
        , ansi-terminal
        , bytestring
        , optparse-applicative
        , table-layout
        , text
        , typed-process
    hs-source-dirs:   app
    default-language: Haskell2010
