cabal-version:      2.4
name:               deback
version:            0.0.3
synopsis:           An opinionated backup and archive tool
description:        Please see the README on GitHub at <https://github.com/telostat/deback#readme>
homepage:           https://github.com/telostat/deback#readme
bug-reports:        https://github.com/telostat/deback/issues
author:             Vehbi Sinan Tunalioglu
maintainer:         vst@vsthost.com
copyright:          2022 Teloscube Pte Ltd
license:            MIT
license-file:       LICENSE
category:           System, Backup
build-type:         Simple

extra-source-files:
    CHANGELOG.md
    README.md

executable deback
    main-is:          Main.hs

    other-modules:
          Deback.Cli
        , Deback.Programs
        , Deback.Tools.Cryptsetup
        , Deback.Tools.Format
        , Deback.Tools.Mount
        , Deback.Tools.Rrclone
        , Deback.Tools.Smartctl
        , Paths_deback


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base ^>= 4.16.1.0
        , aeson
        , ansi-terminal
        , bytestring
        , optparse-applicative
        , table-layout
        , text
        , typed-process
    hs-source-dirs:   app
    default-language: Haskell2010
